# Finch

./: .cursorignore  .cursorindexingignore  .env.example  .gitignore  .prettierignore  13-UAT.md  AGENTS.md  AIreadme.md  CLAUDE.md  LICENSE  README.md  app.jsx  audit_results.txt  cleanup_errors.txt  framer.js  full_lint.txt  knip_report.json  lucide.js  metadata.json  package-lock.json  package.json  tsconfig.json
.cursor/: audit.json  audit_results.json  dependency_audit.json  ipc-patterns.mdc  provider-patterns.mdc  settings.json  studio-canvas.mdc  token_consumption_audit.json
.planning/: AUDIT_ROADMAP.md  BACKEND_AUDIT_ROADMAP.md  FINCH_FIX_ROADMAP.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  STUDIO_ROADMAP.md  config.json
.playwright-mcp/: page-2026-04-20T04-54-44-773Z.yml  page-2026-04-20T04-55-05-171Z.yml  page-2026-04-20T04-57-15-394Z.yml  page-2026-04-20T05-00-13-865Z.yml  page-2026-04-20T05-01-07-435Z.yml
Old_references/: codemap_dashboard_tsx.md  codemap_lib_rs.md  lib.rs
docs/: 06-01-UAT.md  BACKLOG.md  Finch - dashboard MVP Scope.md  Finch Codebase Map (post-split).md  IDEAS.md  Migration-Map-Integration.md  README.md  implementation_plan.md  implementation_plan_design.md  performance_audit.md  performance_plan.md  standby_2026-04-15.md  startup_screen_plan.md
finch-paper/: gemini.md  package-lock.json  (+1 more)
finch/src-tauri/: Cargo.toml  tauri.conf.json
finch/src-tauri/capabilities/: default.json  sandbox.json
finch/src-tauri/permissions/: finch.toml  greet.toml
finch/src-tauri/src/: anthropic.rs  download.rs  lib.rs  tavily.rs  voice.rs
(+335 files in other folders)
